Ensure spotbugs applies to subprojects

--- a/retail/retail-java-applications/build.gradle
+++ b/retail/retail-java-applications/build.gradle
@@ -48,6 +48,14 @@ spotless {
     }
 }
 
+subprojects {
+    apply plugin: 'com.github.spotbugs'
+
+    spotbugs {
+        effort = 'max'
+    }
+}
+
 wrapper {
     gradleVersion = '5.6.1'
 }
