Add Transaction pipeline, also ensure TransactionProcessing and ClickStreamProcessing have same main transform patterns.

--- a/retail/retail-java-applications/build.gradle
+++ b/retail/retail-java-applications/build.gradle
@@ -48,6 +48,10 @@ spotless {
     }
 }
 
+afterEvaluate {
+    tasks.getByName('spotlessCheck').dependsOn(tasks.getByName('spotlessApply'))
+}
+
 subprojects {
     apply plugin: 'com.github.spotbugs'
 }
