--- a/retail/retail-java-applications/data-engineering-dept/business-logic/build.gradle
+++ b/retail/retail-java-applications/data-engineering-dept/business-logic/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     // Testing tools
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    testCompile group: 'com.google.guava', name: 'guava-testlib', version: '29.0-jre'
+
 
 }
 
