--- a/retail/retail-java-applications/build.gradle
+++ b/retail/retail-java-applications/build.gradle
@@ -52,9 +52,9 @@ afterEvaluate {
     tasks.getByName('spotlessCheck').dependsOn(tasks.getByName('spotlessApply'))
 }
 
-subprojects {
-    apply plugin: 'com.github.spotbugs'
-}
+//subprojects {
+//    apply plugin: 'com.github.spotbugs'
+//}
 
 wrapper {
     gradleVersion = '5.6.1'
