--- a/retail/retail-java-applications/data-engineering-dept/pipelines/build.gradle
+++ b/retail/retail-java-applications/data-engineering-dept/pipelines/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile project(':data-engineering-dept:business-logic')
 
     // Test
+    compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile project(':data-engineering-dept:business-logic').sourceSets.test.output
 }
 
