--- a/timeseries-streaming/timeseries-java-applications/SyntheticExamples/build.gradle
+++ b/timeseries-streaming/timeseries-java-applications/SyntheticExamples/build.gradle
@@ -29,15 +29,20 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-task run_example(type: JavaExec) {
-    classpath sourceSets.main.runtimeClasspath
-    main = "com.google.dataflow.sample.timeseriesflow.examples.simpledata.transforms.SimpleDataStreamGenerator"
-}
-
 // Enable code formatting
 spotless {
     java {
         licenseHeaderFile '../Apache_Licence_For_Spotless'
         googleJavaFormat('1.7')
     }
+}
+
+task run_example(type: JavaExec) {
+    classpath sourceSets.main.runtimeClasspath
+    main = "com.google.dataflow.sample.timeseriesflow.examples.simpledata.transforms.SimpleDataStreamGenerator"
+}
+
+task generate_bootstrap_data(type: JavaExec) {
+    classpath sourceSets.main.runtimeClasspath
+    main = "com.google.dataflow.sample.timeseriesflow.examples.simpledata.transforms.SimpleDataBootstrapGenerator"
 }
