--- a/timeseries-streaming/timeseries-java-applications/TimeSeriesMetricsLibrary/build.gradle
+++ b/timeseries-streaming/timeseries-java-applications/TimeSeriesMetricsLibrary/build.gradle
@@ -60,7 +60,8 @@ dependencies {
     testCompileOnly             "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
     testAnnotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation(platform('org.junit:junit-bom:5.7.0'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.apache.beam', name: 'beam-runners-direct-java', version: "${beamVersion}"
 
