[Timeseries] TS-12-TFX-Upgrade-0.23.0
[Timeseries] Remove Epoc as param.

[Timeseries] Add KFP Example

[Timeseries] Remove non-required tf.transform steps

[Timeseries] Add pos print statement for feature map

[Timeseries] add tensorboard to encode / decode model

[Timeseries] Pass through custom config to AI platform trainer

[Timeseries] Update sin_wave example with new TFX pipeline and inference

--- a/timeseries-streaming/timeseries-python-applications/setup.cfg
+++ b/timeseries-streaming/timeseries-python-applications/setup.cfg
@@ -50,14 +50,14 @@ split_before_logical_operator = False
 deps =
   yapf
 commands =
-  yapf --diff --recursive MLPipeline/timeseries, MLPipelineExample/test_pipelines
+  yapf --diff --recursive ml_pipeline/timeseries, ml_pipeline_examples/sin_wave_example
 skip_install = True
 
 [testenv:yapf]
 deps =
   yapf
 commands =
-  yapf --parallel --recursive --in-place MLPipeline/timeseries
+  yapf --parallel --recursive --in-place ml_pipeline/timeseries, ml_pipeline_examples/sin_wave_example
 skip_install = True
 
 [testenv:lint]
@@ -67,6 +67,6 @@ deps =
 
 commands =
   echo "Running pylint..."
-  pylint MLPipeline/timeseries
+  pylint ml_pipeline/timeseries
   echo "Running flake8..."
-  flake8 MLPipeline/timeseries --show-source --statistics
+  flake8 ml_pipeline/timeseries --show-source --statistics
