--- a/timeseries-streaming/timeseries-java-applications/TimeSeriesMetricsLibrary/build.gradle
+++ b/timeseries-streaming/timeseries-java-applications/TimeSeriesMetricsLibrary/build.gradle
@@ -57,11 +57,11 @@ dependencies {
     // Enable code formatting
     compile 'com.google.googlejavaformat:google-java-format:1.7'
 
-    testCompileOnly             "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
-    testAnnotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"
 
     testImplementation(platform('org.junit:junit-bom:5.7.0'))
     testImplementation('org.junit.jupiter:junit-jupiter')
+
+    testCompile project(path: ":TimeSeriesPipeline", configuration: 'testArtifacts')
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.apache.beam', name: 'beam-runners-direct-java', version: "${beamVersion}"
 
