--- a/timeseries-streaming/timeseries-java-applications/TimeSeriesPipeline/build.gradle
+++ b/timeseries-streaming/timeseries-java-applications/TimeSeriesPipeline/build.gradle
@@ -85,6 +85,20 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
+    testCompileOnly             "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
+    testAnnotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"
+
+}
+
+configurations {
+    testArtifacts.extendsFrom testCompile
+}
+task testJar(type: Jar) {
+    classifier "test"
+    from sourceSets.test.output
+}
+artifacts {
+    testArtifacts testJar
 }
 
 task scalability_1D_100M_1K_1FS_60SW(type: JavaExec) {
