--- a/timeseries-streaming/timeseries-java-applications/settings.gradle
+++ b/timeseries-streaming/timeseries-java-applications/settings.gradle
@@ -20,4 +20,4 @@ rootProject.name = 'timeseries-java-applications'
 include 'TimeSeriesPipeline'
 include 'TimeSeriesMetricsLibrary'
 include 'SyntheticExamples'
-include 'Adaptors'
+include 'Adapters'
