[Timeseries] Implement example to process Forex dataset

--- a/timeseries-streaming/timeseries-java-applications/settings.gradle
+++ b/timeseries-streaming/timeseries-java-applications/settings.gradle
@@ -20,4 +20,6 @@ rootProject.name = 'timeseries-java-applications'
 include 'TimeSeriesPipeline'
 include 'TimeSeriesMetricsLibrary'
 include 'SyntheticExamples'
+include 'Examples'
+
 include 'Adapters'
