--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,6 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
+  
   timeseries:
 
     runs-on: ubuntu-latest
@@ -17,6 +18,25 @@ jobs:
     defaults:
       run:
         working-directory: timeseries-streaming/timeseries-java-applications/
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
+  
+  retail:
+
+    runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: retail/retail-java-applications/
 
     steps:
     - uses: actions/checkout@v2
