Add terraform script for pub/sub and enabling APIs
Add required provider block and parameterise project id

Change default project id

Parameterise components names and add a readme file for terraform

Remove intermediate file

Update original README file

Add a section for editing resource names and a new line at the end of file

Add *.tfstate.* to .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,9 @@ sdks/python/postcommit_requirements.txt
 
 .pytest_cache
 .pytest_cache/**/*
+
+# Terraform intermediate artifacts
+.terraform/
+.terraform.lock.hcl
+*.tfstate
+*.tfstate.*
