--- a/timeseries-streaming/timeseries-java-applications/TimeSeriesMetricsLibrary/build.gradle
+++ b/timeseries-streaming/timeseries-java-applications/TimeSeriesMetricsLibrary/build.gradle
@@ -28,7 +28,18 @@ test {
     retry {
         failOnPassedAfterRetry = true
         maxFailures = 3
-        maxRetries = 1
+        maxRetries = 2
+    }
+
+    testLogging {
+        events "passed", "skipped", "failed" //, "standardOut", "standardError"
+
+        showExceptions true
+        exceptionFormat "full"
+        showCauses true
+        showStackTraces true
+
+        showStandardStreams = false
     }
 }
 
