--- a/timeseries-streaming/timeseries-java-applications/build.gradle
+++ b/timeseries-streaming/timeseries-java-applications/build.gradle
@@ -23,13 +23,16 @@ buildscript { repositories { mavenCentral() }}
 allprojects {
 
     ext {
-        beamVersion = '2.28.0'
+        beamVersion = '2.38.0'
         protobuf_version = '3.11.1'
         autoValueVersion = '1.6.3'
     }
 
     repositories {
         mavenCentral()
+        maven {
+            url "https://packages.confluent.io/maven"
+        }
     }
     wrapper {
         gradleVersion = '6.8' //version required
