--- a/timeseries-streaming/timeseries-java-applications/TimeSeriesPipeline/build.gradle
+++ b/timeseries-streaming/timeseries-java-applications/TimeSeriesPipeline/build.gradle
@@ -15,17 +15,17 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
+//
 buildscript {
     dependencies {
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.12'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.19'
     }
 }
 
 plugins {
     id 'java'
     id 'idea'
-    id "com.google.protobuf" version "0.8.12"
+    id "com.google.protobuf" version "0.8.19"
     id "com.diffplug.gradle.spotless" version "3.24.2"
     id 'org.gradle.test-retry' version '1.0.0'
 //    id "com.github.spotbugs" version "4.4.4"
@@ -45,7 +45,7 @@ protobuf {
     generatedFilesBaseDir = "$projectDir/build"
     protoc {
         // Download from repositories
-        artifact = 'com.google.protobuf:protoc:3.0.0'
+        artifact = 'com.google.protobuf:protoc:3.19.4'
     }
 }
 
@@ -77,7 +77,7 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '30.1-jre'
     compile group: 'org.apache.beam', name: 'beam-sdks-java-core', version: "${beamVersion}"
     compile group: 'org.apache.beam', name: 'beam-sdks-java-io-google-cloud-platform', version:"${beamVersion}"
-    compile group: 'org.apache.beam', name: 'beam-runners-portability-java', version: '2.22.0'
+    compile group: 'org.apache.beam', name: 'beam-runners-portability-java', version:"${beamVersion}"
     compile group: 'org.apache.beam', name: 'beam-runners-google-cloud-dataflow-java', version:  "${beamVersion}"
     compile group: 'org.tensorflow', name: 'tensorflow', version: '1.15.0'
     compile group: 'org.tensorflow', name: 'proto', version: '1.15.0'
@@ -90,7 +90,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
-    testCompileOnly             "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
+    testCompileOnly         "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
     testAnnotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"
 
 }
