Adding gradle task for executing on Dataflow

--- a/retail/retail-java-applications/data-engineering-dept/pipelines/build.gradle
+++ b/retail/retail-java-applications/data-engineering-dept/pipelines/build.gradle
@@ -33,3 +33,7 @@ dependencies {
     testCompile project(':data-engineering-dept:business-logic').sourceSets.test.output
 }
 
+task executeOnDataflow(type: JavaExec){
+    classpath=sourceSets.main.runtimeClasspath
+    main = "com.google.dataflow.sample.retail.pipeline.RetailDataProcessingPipeline"
+}
