Passing arguments through

--- a/retail/retail-java-applications/data-engineering-dept/pipelines/build.gradle
+++ b/retail/retail-java-applications/data-engineering-dept/pipelines/build.gradle
@@ -36,4 +36,6 @@ dependencies {
 task executeOnDataflow(type: JavaExec){
     classpath=sourceSets.main.runtimeClasspath
     main = "com.google.dataflow.sample.retail.pipeline.RetailDataProcessingPipeline"
+    systemProperties System.getProperties()
+    args System.getProperty("exec.args", "").split()
 }
